# DQN-Fusion

./: .env.example  .gitignore  .pre-commit-config.yaml  AD-KD-GPU.py  AD-KD.py  AD_KD_GPU.py  BATCH_SIZE_AND_RUN_COUNTER_DESIGN.md  BATCH_SIZE_EXPLANATION.md  BATCH_SIZE_INVESTIGATION_COMPLETE.md  BATCH_SIZE_MYSTERY_SOLVED.md  BATCH_SIZE_TUNER_INVESTIGATION.md  BUGFIX_SUMMARY.md  CLAUDE.md  CODEBASE_SYNTHESIS.md  COMPREHENSIVE_FAILURE_ANALYSIS.md  CONFIG_CONSOLIDATION_ANALYSIS.md  CURRICULUM_RESEARCH_DEMO.py  DATA_ENGINEERING_EXPLORATION.md  DEBUG_BATCH_SIZE_INVESTIGATION.md  DESIGN_PRINCIPLES.md  DOCS_CLEANUP_PLAN.md  DQN_15D_EMBEDDINGS_EXPLAINED.md  DQN_STATE_SPACE_ANALYSIS.md  ENHANCED_RETRAINING_README.md  EVALUATION_FIX_SUMMARY.md  EVALUATION_PHASE1_REVIEW.md  EVALUATION_TEST_PLAN.md  EXPERIMENT_RESULTS_ANALYSIS.md  FABRIC_MIGRATION_GUIDE.md  FIXES_IMPLEMENTED.md  FUSION_INTEGRATION_CHANGELOG.md  GPU_MONITORING_GUIDE.md  HOW_TO_ANALYZE_JOB_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_UPDATE_SUMMARY.md  INFERENCE_IMPLEMENTATION.md  JOB_TEMPLATES.md  Justfile  KD_REFACTOR_PLAN.md  LIGHTNING_WORKFLOW_GUIDE.md  (+110 more)
.claude/: .nfs00000000000b4fa10002c66f  .nfs00000000000b4fc80002c671  .nfs00000000000b95c00002c64a  .nfs00000000000bc7bf0002c6a5  .nfs00000000000bc7c00002c6a2  .nfs00000000000bccc30002c6a4  .nfs00000000000bccc50002c6a6  .nfs00000000000bccd70002c6ab  .nfs00000000000be7e20002c667  .nfs00000000000be83e0002c672  FROZEN_CONFIG_ROADMAP.md  INDEX.md  MAINTENANCE.md  PIPELINE_INVESTIGATION.md  QUICK_REFERENCE.md
.dvc/: config
.ondemand/: job_log.yml  manifest.yml
AAAI_submission/: README.md  training_utils.py
Project_root/: pyproject.toml
archive/: AD_KD_GPU.py  preprocessing.py
conf/: base.yaml  class_imbalance.yaml  config.yaml  fabric.yaml  hpc_optimized.yaml
config/: __init__.py  batch_size_factors.json  catalog.py  constants.py  datasets.yaml  defaults.yaml  hydra_zen_configs.py  paths.py  plotting_config.py  resolver.py  schema.py
data/: datasets.yaml  project.db  project.db.backup
docs/: ADAPTIVE_BATCH_SIZE_SYSTEM.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  BATCH_SIZE_OPTIMIZATION_CHANGES.md  CHANGELOG.md  CI_CD_Explained.md  CODEBASE_AUDIT.md  ECOSYSTEM.md  EXPERIMENTAL_DESIGN.md  FUSION_INTEGRATION_SUMMARY.md  FUSION_INTEGRATION_VISUAL_SUMMARY.sh  FUSION_QUICK_START.sh  FUSION_RUNS.md  FUSION_TRAINING_GUIDE.md  GPU_RUNNER_SETUP.md  INFRASTRUCTURE_PLAN.md  INTEGRATION_CODE_TEMPLATES.md  INTREGRATION_TODO.md  JOBS_WORKFLOW.md  KNOWLEDGE_DISTILLATION_README.md  MERMAID_IMPLEMENTATION_PLAN.md  MLflow_SETUP.md  MODEL_SIZE_CALCULATIONS.md  OPEN_SOURCE_LIBRARIES_ANALYSIS.md  PATH_CONSOLIDATION_COMPLETE.md  PIPELINE_QUICK_REFERENCE.md  PIPELINE_USER_GUIDE.md  PR_MANIFEST_CLI.md  QUICK_DESIGN_CHANGE.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCES.md  README.md  REFACTORING_PHASE1_SUMMARY.md  SHORT_SUBMIT_CHECKLIST.md  THREE_USE_CASES_EXPLAINED.md  THREE_USE_CASES_QUICK_REFERENCE.md  THREE_USE_CASES_VISUAL_SUMMARY.sh  TRAINING_CONSOLIDATION_COMPLETE.md  TRAINING_MODULE_CONSOLIDATION_PLAN.md  TROUBLESHOOTING.md  (+13 more)
docs-site/: astro.config.mjs  package-lock.json  package.json
envs/: gnn-experiments.yaml  gnn-experiments.yml
evaluation_docs/: EVALUATION_1_0_RELEASE.md  EVALUATION_FRAMEWORK_README.md  EVALUATION_IMPLEMENTATION_PLAN.md
examples/: README.md  curriculum_learning.py  fusion_training.py  knowledge_distillation.py  simple_gat_training.py  train_with_hydra_zen_snakemake_adapter.py  vgae_autoencoder_training.py
experiment_results/: budget_proposal_M3_k20.json
graphids/: __init__.py
jobs/: example_fusion.json  (+5 more)
(+1395 files in other folders)
