[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-gat"
version = "1.0.0"
description = "CAN Bus Intrusion Detection via Knowledge Distillation (VGAE → GAT → DQN)"
dependencies = [
    "torch>=2.0.1",
    "torch-geometric>=2.6.1",
    "pytorch-lightning>=2.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyarrow>=14.0.0",
    "mlflow>=2.9.2",
    "pyyaml>=6.0",
    "psutil>=6.0.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
kd-gat = "pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (>30s, deselect with '-m not slow')"]
