[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-gat"
version = "1.0.0"
description = "CAN Bus Intrusion Detection via Knowledge Distillation (VGAE → GAT → DQN)"
dependencies = [
    "torch>=2.0.1",
    "torch-geometric>=2.6.1",
    "pytorch-lightning>=2.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyarrow>=14.0.0",
    "wandb>=0.18",
    "pyyaml>=6.0",
    "psutil>=6.0.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "httpx>=0.27", "ruff>=0.4"]
orchestration = ["prefect>=3.0", "prefect-dask>=0.3", "dask-jobqueue>=0.9"]
lakehouse = ["httpx>=0.27"]
rapids = ["cudf-cu12>=24.12", "cuml-cu12>=24.12", "cupy-cuda12x>=13.0"]

[project.scripts]
kd-gat = "pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (>30s, deselect with '-m not slow')",
    "slurm: marks tests that require SLURM submission",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E741", "W291", "W292", "W293", "F541", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401"]
"pipeline/flows/*" = ["F401"]
"pipeline/stages/*" = ["F401"]
