# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-graph"
version = "1.0.0"
description = "Multi-Stage Knowledge-Distilled VGAE and GAT for CAN Intrusion Detection"
dependencies = [
    "torch>=1.12.0",
    "torch-geometric>=2.6.1",
    "scikit-learn>=1.5.0",
    "hydra-core>=1.3.0",
    # ... other dependencies
]